[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/state_editor.gd" type="Script" id=1]
[ext_resource path="res://menus/LineEditJS/LineEditJS.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 50
script = ExtResource( 1 )

[node name="StateEditor" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="StateEditor"]
margin_right = 480.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="ColorRect" parent="StateEditor"]
margin_right = 480.0
margin_bottom = 360.0
color = Color( 0.231373, 0.290196, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherState" type="ScrollContainer" parent="StateEditor/Frame"]
margin_top = 66.0322
margin_right = 248.0
margin_bottom = 186.032
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateEditor/Frame/OtherState"]
custom_constants/separation = -8

[node name="KeyState" type="ScrollContainer" parent="StateEditor/Frame"]
margin_left = 252.397
margin_top = 66.0322
margin_right = 471.397
margin_bottom = 186.032
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateEditor/Frame/KeyState"]
custom_constants/separation = -8

[node name="CustomAState" type="ScrollContainer" parent="StateEditor/Frame"]
margin_top = 191.0
margin_right = 240.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateEditor/Frame/CustomAState"]
custom_constants/separation = -8

[node name="CustomBState" type="ScrollContainer" parent="StateEditor/Frame"]
margin_left = 240.0
margin_top = 191.0
margin_right = 474.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateEditor/Frame/CustomBState"]
custom_constants/separation = -8

[node name="SaveButton" type="Button" parent="StateEditor/Frame"]
margin_left = 378.999
margin_top = 324.0
margin_right = 471.999
margin_bottom = 354.0
text = "Save (reload)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="StateEditor/Frame"]
margin_left = 80.0
margin_top = 324.0
margin_right = 176.0
margin_bottom = 354.0
text = "Exit (no save)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="StateEditor/Frame"]
margin_left = 10.0
margin_top = 324.0
margin_right = 72.0
margin_bottom = 354.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StateEditor/Frame"]
margin_left = 252.397
margin_top = 11.401
margin_right = 346.397
margin_bottom = 25.401
text = "Current player:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="StateEditor/Frame"]
margin_left = 252.397
margin_top = 43.5944
margin_right = 346.397
margin_bottom = 57.5944
text = "Current room:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerA" type="CheckBox" parent="StateEditor/Frame"]
margin_left = 354.105
margin_top = 7.0
margin_right = 434.105
margin_bottom = 31.0
text = "A"

[node name="PlayerB" type="CheckBox" parent="StateEditor/Frame"]
margin_left = 388.077
margin_top = 7.0
margin_right = 468.077
margin_bottom = 31.0
text = "B"

[node name="Label2" type="Label" parent="StateEditor/Frame"]
margin_left = 10.0
margin_top = 12.7121
margin_right = 80.0
margin_bottom = 26.7121
text = "Code for A:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="StateEditor/Frame"]
margin_left = 10.0
margin_top = 43.5944
margin_right = 80.0
margin_bottom = 57.5944
text = "Code for B:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateCodeA" type="LineEdit" parent="StateEditor/Frame"]
margin_left = 83.2507
margin_top = 7.0
margin_right = 233.251
margin_bottom = 31.0
align = 1
editable = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateCodeB" type="LineEdit" parent="StateEditor/Frame"]
margin_left = 83.381
margin_top = 37.8823
margin_right = 233.381
margin_bottom = 61.8823
align = 1
editable = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect" type="OptionButton" parent="StateEditor/Frame"]
margin_left = 353.442
margin_top = 40.536
margin_right = 468.442
margin_bottom = 60.536
text = "(Game Menu)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesButton" type="Button" parent="StateEditor/Frame"]
margin_left = 431.223
margin_top = 9.95131
margin_right = 471.223
margin_bottom = 29.9513
text = "tiles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesPopup" type="Node2D" parent="StateEditor/Frame"]

[node name="ColorRect" type="ColorRect" parent="StateEditor/Frame/TilesPopup"]
margin_right = 480.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.427451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="StateEditor/Frame/TilesPopup"]
margin_left = 110.0
margin_top = 40.0
margin_right = 370.0
margin_bottom = 340.0
color = Color( 0.509804, 0.439216, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="StateEditor/Frame/TilesPopup"]
position = Vector2( 170, 100 )

[node name="Option0" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_right = 37.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 50.0
margin_right = 87.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 100.0
margin_right = 137.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_top = 30.0
margin_right = 37.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option4" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 50.0
margin_top = 30.0
margin_right = 87.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option5" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 100.0
margin_top = 30.0
margin_right = 137.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option6" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_top = 60.0
margin_right = 37.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option7" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 50.0
margin_top = 60.0
margin_right = 87.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option8" type="OptionButton" parent="StateEditor/Frame/TilesPopup/Options"]
margin_left = 100.0
margin_top = 60.0
margin_right = 137.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StateEditor/Frame/TilesPopup"]
margin_left = 260.0
margin_top = 80.0
margin_right = 315.0
margin_bottom = 94.0
text = "Entrance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="StateEditor/Frame/TilesPopup"]
margin_left = 315.0
margin_top = 165.0
margin_right = 338.0
margin_bottom = 179.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesDoneButton" type="Button" parent="StateEditor/Frame/TilesPopup"]
margin_left = 290.0
margin_top = 280.0
margin_right = 345.0
margin_bottom = 306.0
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesResetButton" type="Button" parent="StateEditor/Frame/TilesPopup"]
margin_left = 140.0
margin_top = 280.0
margin_right = 195.0
margin_bottom = 306.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StateEditor/Frame/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="StateEditor/Frame/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="StateEditor/Frame/ResetButton" to="." method="reload"]
[connection signal="pressed" from="StateEditor/Frame/PlayerA" to="." method="_on_PlayerA_pressed"]
[connection signal="pressed" from="StateEditor/Frame/PlayerB" to="." method="_on_PlayerB_pressed"]
[connection signal="pressed" from="StateEditor/Frame/TilesButton" to="." method="_on_TilesButton_pressed"]
[connection signal="pressed" from="StateEditor/Frame/TilesPopup/TilesDoneButton" to="." method="_on_TilesDoneButton_pressed"]
[connection signal="pressed" from="StateEditor/Frame/TilesPopup/TilesResetButton" to="." method="_on_TilesResetButton_pressed"]
